fixtures/validation/ui-toolkit-graphics-package/invalid/source-missing-fields/Layout/MainMenu.uxml
<ui:UXML xmlns:ui="UnityEngine.UIElements">
  <ui:VisualElement name="source-missing" />
</ui:UXML>
